force-app/main/default/objects/Employment__c/Employment__c.object-meta.xml
<CustomObject>
    <label>Income</label>
    <nameField>
        <displayFormat>EMP- {00000000}</displayFormat>
        <label>Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>