force-app/main/default/objects/Employment__c/fields/Amount_1__c.field-meta.xml
<CustomField>
    <fullName>Amount_1__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Amount 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>