force-app/main/default/objects/Employment__c/fields/Amount_Payable_for_Death__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable_for_Death__c</fullName>
    <label>Amount Payable for Death</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>