force-app/main/default/objects/Employment__c/fields/Annual_bonus_year2__c.field-meta.xml
<CustomField>
    <fullName>Annual_bonus_year2__c</fullName>
    <label>Annual bonus (Year 2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>