force-app/main/default/objects/Employment__c/fields/Annual_income_from_second_job__c.field-meta.xml
<CustomField>
    <fullName>Annual_income_from_second_job__c</fullName>
    <label>Annual income from second job</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>