force-app/main/default/objects/Employment__c/fields/Anticipated_Retirement_Age__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Retirement_Age__c</fullName>
    <label>Anticipated Retirement Age</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>