force-app/main/default/objects/Employment__c/fields/Applicant_continuous_employment__c.field-meta.xml
<CustomField>
    <fullName>Applicant_continuous_employment__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Retrieving data. Wait a few seconds and try to cut or copy again.</description>
    <inlineHelpText>How long has the applicant been in continuous employment?</inlineHelpText>
    <label>How long you been continuous employment?</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>