force-app/main/default/objects/Employment__c/fields/Approximate_Tax_Paid_incl_NI__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Tax_Paid_incl_NI__c</fullName>
    <label>Approximate Tax Paid (incl. NI)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>