force-app/main/default/objects/Employment__c/fields/Child_and_working_tax_credit__c.field-meta.xml
<CustomField>
    <fullName>Child_and_working_tax_credit__c</fullName>
    <label>Child and working tax credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>