force-app/main/default/objects/Employment__c/fields/Child_benefit__c.field-meta.xml
<CustomField>
    <fullName>Child_benefit__c</fullName>
    <label>Child benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>