force-app/main/default/objects/Employment__c/fields/Childcare_Vouchers__c.field-meta.xml
<CustomField>
    <fullName>Childcare_Vouchers__c</fullName>
    <label>Childcare Vouchers</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>