force-app/main/default/objects/Employment__c/fields/Company_incorporation_date__c.field-meta.xml
<CustomField>
    <fullName>Company_incorporation_date__c</fullName>
    <label>Company incorporation date</label>
    <type>Date</type>
</CustomField>