force-app/main/default/objects/Employment__c/fields/Contract_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Months__c</fullName>
    <label>Months</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>