force-app/main/default/objects/Employment__c/fields/Contract_Years__c.field-meta.xml
<CustomField>
    <fullName>Contract_Years__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Years</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>