force-app/main/default/objects/Employment__c/fields/Contractor_Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Daily_Rate__c</fullName>
    <label>Daily Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>