force-app/main/default/objects/Employment__c/fields/Contractor_Details__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Details__c</fullName>
    <label>Contractor Details</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily rate contractor</fullName>
            </value>
            <value>
                <fullName>Fixed term contractor</fullName>
            </value>
            <value>
                <fullName>Umbrella</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>