force-app/main/default/objects/Employment__c/fields/Currently_on_probation_period__c.field-meta.xml
<CustomField>
    <fullName>Currently_on_probation_period__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Currently on probation period?</label>
    <type>Checkbox</type>
</CustomField>