force-app/main/default/objects/Employment__c/fields/Death_In_Service__c.field-meta.xml
<CustomField>
    <fullName>Death_In_Service__c</fullName>
    <label>Death In Service</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>