force-app/main/default/objects/Employment__c/fields/Dividends_Payment__c.field-meta.xml
<CustomField>
    <fullName>Dividends_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Dividends Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>