force-app/main/default/objects/Employment__c/fields/Employed_Salary__c.field-meta.xml
<CustomField>
    <fullName>Employed_Salary__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Employed Annual Salary</inlineHelpText>
    <label>Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>