force-app/main/default/objects/Employment__c/fields/Employee_Benefit__c.field-meta.xml
<CustomField>
    <fullName>Employee_Benefit__c</fullName>
    <label>Employee Benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>