force-app/main/default/objects/Employment__c/fields/employees_under_the_applicant__c.field-meta.xml
<CustomField>
    <fullName>employees_under_the_applicant__c</fullName>
    <label>No. of employees under the applicant</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>