force-app/main/default/objects/Employment__c/fields/Employer_Address__c.field-meta.xml
<CustomField>
    <fullName>Employer_Address__c</fullName>
    <label>Employer Address</label>
    <type>TextArea</type>
</CustomField>