force-app/main/default/objects/Employment__c/fields/Employment_changing_in_the_near_future__c.field-meta.xml
<CustomField>
    <fullName>Employment_changing_in_the_near_future__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the applicant anticipate their employment changing in the near future?</description>
    <inlineHelpText>Does the applicant anticipate their employment changing in the near future?</inlineHelpText>
    <label>Employment changing in the near future?</label>
    <type>Checkbox</type>
</CustomField>