force-app/main/default/objects/Employment__c/fields/Employment_sub_type__c.field-meta.xml
<CustomField>
    <fullName>Employment_sub_type__c</fullName>
    <label>Employment sub-type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Employment_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Permanent</fullName>
            </value>
            <value>
                <fullName>Probation</fullName>
            </value>
            <value>
                <fullName>Fixed term contract</fullName>
            </value>
            <value>
                <fullName>Temporary</fullName>
            </value>
            <value>
                <fullName>Partnership</fullName>
            </value>
            <value>
                <fullName>Sole-Trader</fullName>
            </value>
            <value>
                <fullName>Director/Shareholder less than 20%</fullName>
            </value>
            <value>
                <fullName>Director/Shareholder more than 20%</fullName>
            </value>
            <value>
                <fullName>Day rate contractor</fullName>
            </value>
            <value>
                <fullName>Umbrella contractor</fullName>
            </value>
            <value>
                <fullName>CIS (Construction Industry Scheme)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>