force-app/main/default/objects/Employment__c/fields/Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Employment_Type__c</fullName>
    <label>Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self employed</fullName>
            </value>
            <value>
                <fullName>Contractor</fullName>
            </value>
            <value>
                <fullName>Retired</fullName>
            </value>
            <value>
                <fullName>Homemaker</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Unemployed</fullName>
            </value>
            <value>
                <fullName>Fixed term contractor</fullName>
                <isActive>false</isActive>
                <label>Fixed term contractor</label>
            </value>
            <value>
                <fullName>Permanent</fullName>
                <isActive>false</isActive>
                <label>Permanent</label>
            </value>
            <value>
                <fullName>Piece work</fullName>
                <isActive>false</isActive>
                <label>Piece work</label>
            </value>
            <value>
                <fullName>Sub term contractor fixed term</fullName>
                <isActive>false</isActive>
                <label>Sub term contractor fixed term</label>
            </value>
            <value>
                <fullName>Sub term contractor open ended</fullName>
                <isActive>false</isActive>
                <label>Sub term contractor open ended</label>
            </value>
            <value>
                <fullName>Temporary or agency</fullName>
                <isActive>false</isActive>
                <label>Temporary or agency</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>