force-app/main/default/objects/Employment__c/fields/Emplyment_basis__c.field-meta.xml
<CustomField>
    <fullName>Emplyment_basis__c</fullName>
    <label>Emplyment basis</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full time</fullName>
            </value>
            <value>
                <fullName>Part time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>