force-app/main/default/objects/Employment__c/fields/End_date_of_contract__c.field-meta.xml
<CustomField>
    <fullName>End_date_of_contract__c</fullName>
    <label>End date of contract</label>
    <type>Date</type>
</CustomField>