force-app/main/default/objects/Employment__c/fields/Gross_Income_Weekly_from_umbrella_comp__c.field-meta.xml
<CustomField>
    <fullName>Gross_Income_Weekly_from_umbrella_comp__c</fullName>
    <label>Gross Income (Weekly) from umbrella comp</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>