force-app/main/default/objects/Employment__c/fields/Gym_Membership__c.field-meta.xml
<CustomField>
    <fullName>Gym_Membership__c</fullName>
    <label>Gym Membership</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>