force-app/main/default/objects/Employment__c/fields/Insurance_payroll_service_cost_week__c.field-meta.xml
<CustomField>
    <fullName>Insurance_payroll_service_cost_week__c</fullName>
    <label>Insurance &amp; payroll service cost (week)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>