force-app/main/default/objects/Employment__c/fields/Investment_income__c.field-meta.xml
<CustomField>
    <fullName>Investment_income__c</fullName>
    <label>Investment income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>