force-app/main/default/objects/Employment__c/fields/Is_the_salary_paid_into_a_UK_account__c.field-meta.xml
<CustomField>
    <fullName>Is_the_salary_paid_into_a_UK_account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the salary paid into a UK account?</label>
    <type>Checkbox</type>
</CustomField>