force-app/main/default/objects/Employment__c/fields/Limited_company_name__c.field-meta.xml
<CustomField>
    <fullName>Limited_company_name__c</fullName>
    <label>Limited company name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>