force-app/main/default/objects/Employment__c/fields/Maintenance_income__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_income__c</fullName>
    <label>Maintenance income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>