force-app/main/default/objects/Employment__c/fields/Monthly_Payslip_Deductions__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Payslip_Deductions__c</fullName>
    <label>Monthly Payslip Deductions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>