force-app/main/default/objects/Employment__c/fields/Months__c.field-meta.xml
<CustomField>
    <fullName>Months__c</fullName>
    <label>Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>