force-app/main/default/objects/Employment__c/fields/Net_profit_for_the_previous_year__c.field-meta.xml
<CustomField>
    <fullName>Net_profit_for_the_previous_year__c</fullName>
    <label>Net profit for the previous year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>