force-app/main/default/objects/Employment__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Occupation</label>
    <referenceTo>Occupation__c</referenceTo>
    <relationshipName>Employments</relationshipName>
    <type>Lookup</type>
</CustomField>