force-app/main/default/objects/Employment__c/fields/Operating_profit_for_the_latest_year__c.field-meta.xml
<CustomField>
    <fullName>Operating_profit_for_the_latest_year__c</fullName>
    <label>Operating profit for the latest year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>