force-app/main/default/objects/Employment__c/fields/Other_Benefit_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Benefit_Description__c</fullName>
    <label>Other Benefit Description</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>