force-app/main/default/objects/Employment__c/fields/Other_Deductions_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Deductions_Description__c</fullName>
    <label>Other Deductions Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>