force-app/main/default/objects/Employment__c/fields/Overtime_month3__c.field-meta.xml
<CustomField>
    <fullName>Overtime_month3__c</fullName>
    <label>Overtime (Month 3)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>