force-app/main/default/objects/Employment__c/fields/Pension_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Pension_Contributions__c</fullName>
    <label>Pension Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>