force-app/main/default/objects/Employment__c/fields/Pension_income__c.field-meta.xml
<CustomField>
    <fullName>Pension_income__c</fullName>
    <label>Pension income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>