force-app/main/default/objects/Employment__c/fields/Previous_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Previous_Company_Name__c</fullName>
    <label>Company Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>