force-app/main/default/objects/Employment__c/fields/Previous_Employment_Type__c.field-meta.xml
<CustomField>
    <fullName>Previous_Employment_Type__c</fullName>
    <label>Previous Employment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employed</fullName>
            </value>
            <value>
                <fullName>Self employed</fullName>
            </value>
            <value>
                <fullName>Sole trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>