force-app/main/default/objects/Employment__c/fields/Previous_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>