force-app/main/default/objects/Employment__c/fields/Previous_Leaving_Salary__c.field-meta.xml
<CustomField>
    <fullName>Previous_Leaving_Salary__c</fullName>
    <label>Leaving Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>