force-app/main/default/objects/Employment__c/fields/Previous_Position__c.field-meta.xml
<CustomField>
    <fullName>Previous_Position__c</fullName>
    <label>Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>