force-app/main/default/objects/Employment__c/fields/Previous_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Previous_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>