force-app/main/default/objects/Employment__c/fields/Previous_Year_Dividends_Payment__c.field-meta.xml
<CustomField>
    <fullName>Previous_Year_Dividends_Payment__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Year Dividends Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>