force-app/main/default/objects/Employment__c/fields/Previous_Years_Annual_Salary__c.field-meta.xml
<CustomField>
    <fullName>Previous_Years_Annual_Salary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Previous Years Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>