force-app/main/default/objects/Employment__c/fields/Rental_income__c.field-meta.xml
<CustomField>
    <fullName>Rental_income__c</fullName>
    <label>Rental income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>