force-app/main/default/objects/Employment__c/fields/selfEmployedAnnualsalary__c.field-meta.xml
<CustomField>
    <fullName>selfEmployedAnnualsalary__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Annual Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>