force-app/main/default/objects/Employment__c/fields/Share_Save_Schemes__c.field-meta.xml
<CustomField>
    <fullName>Share_Save_Schemes__c</fullName>
    <label>Share Save Schemes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>