force-app/main/default/objects/Employment__c/fields/Shareholding_of_the_applicant__c.field-meta.xml
<CustomField>
    <fullName>Shareholding_of_the_applicant__c</fullName>
    <label>Shareholding % of the applicant?</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>