force-app/main/default/objects/Employment__c/fields/ST_Business_name__c.field-meta.xml
<CustomField>
    <fullName>ST_Business_name__c</fullName>
    <label>Business name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>