force-app/main/default/objects/Employment__c/fields/Start_date_of_the_employment__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_the_employment__c</fullName>
    <label>Start date of the employment</label>
    <type>Date</type>
</CustomField>