force-app/main/default/objects/Employment__c/fields/Start_date_of_your_current_employment__c.field-meta.xml
<CustomField>
    <fullName>Start_date_of_your_current_employment__c</fullName>
    <label>Start date of your current employment?</label>
    <type>Date</type>
</CustomField>