force-app/main/default/objects/Employment__c/fields/State_disability_benefit__c.field-meta.xml
<CustomField>
    <fullName>State_disability_benefit__c</fullName>
    <label>State disability benefit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>