force-app/main/default/objects/Employment__c/fields/Student_Loan__c.field-meta.xml
<CustomField>
    <fullName>Student_Loan__c</fullName>
    <label>Student Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>