force-app/main/default/objects/Employment__c/fields/Tax_credits__c.field-meta.xml
<CustomField>
    <fullName>Tax_credits__c</fullName>
    <label>Tax credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>