force-app/main/default/objects/Employment__c/fields/Time_in_business_months__c.field-meta.xml
<CustomField>
    <fullName>Time_in_business_months__c</fullName>
    <label>Time in business (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>