force-app/main/default/objects/Employment__c/fields/Time_in_business_years__c.field-meta.xml
<CustomField>
    <fullName>Time_in_business_years__c</fullName>
    <label>Time in business (years)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>