force-app/main/default/objects/Employment__c/fields/Total_Net_Monthly__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Monthly__c</fullName>
    <label>Total Net Monthly</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>