force-app/main/default/objects/Employment__c/fields/Total_other_deductions_after_tax_month__c.field-meta.xml
<CustomField>
    <fullName>Total_other_deductions_after_tax_month__c</fullName>
    <description>Gym Membership + Transport Loan +  Other deductions</description>
    <label>Total other deductions after tax (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>