force-app/main/default/objects/Employment__c/fields/Total_other_deductions_before_tax_month__c.field-meta.xml
<CustomField>
    <fullName>Total_other_deductions_before_tax_month__c</fullName>
    <description>Sickness Benefit + Amount payable for sickness +  Pension Contributions + Share save schemes +  Monthly Payslip Deductions (before tax)</description>
    <label>Total other deductions before tax (MM)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>