force-app/main/default/objects/Employment__c/fields/Transport_Loan__c.field-meta.xml
<CustomField>
    <fullName>Transport_Loan__c</fullName>
    <label>Transport Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>