force-app/main/default/objects/Employment__c/fields/Trust_fund__c.field-meta.xml
<CustomField>
    <fullName>Trust_fund__c</fullName>
    <label>Trust fund</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>