force-app/main/default/objects/Employment__c/fields/Universal_credit__c.field-meta.xml
<CustomField>
    <fullName>Universal_credit__c</fullName>
    <label>Universal credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>