force-app/main/default/objects/Employment__c/fields/What_is_your_personal_tax_band__c.field-meta.xml
<CustomField>
    <fullName>What_is_your_personal_tax_band__c</fullName>
    <label>What is your personal tax band</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Basic rate</fullName>
            </value>
            <value>
                <fullName>Higher rate</fullName>
            </value>
            <value>
                <fullName>Additional rate</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>